# Live-Vision-Narrator

./: .env.example  .gitignore  .gitmodules  .golangci.yml  .pre-commit-config.yaml  Makefile  Modelfile  Modelfile-dolphin  Modelfile-e2b  Modelfile-e2b-un  Modelfile.detailed  README.md  build.ps1  client_test.py  compose.yaml  config.py  config.toml  go.mod  go.work  go.work.sum  main.go  main.py  mouse_route.json  package.json  pyproject.toml  script.py  ui.py  vllm_config.yaml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  dependency_review.yml
api/: aivis_client.go  ollama_client.go
config/: config.go  config.toml
docs/: GO_IMPLEMENTATION.md  ai_conversation_memo.md
heretic/: AUTO_RESUME_GUIDE.md  COLAB_AUTO_SYNC.md  README.md  chat_merged_model.py  check.py  colab_setup.ipynb  merge_lora_local.py  pyproject.toml
models/: Modelfile
processor/: text_processor.go
src-go/: README.md  ci_intentional_fmt_fail.go  ci_intentional_lint_fail.go  go.mod  go.sum  main.go  main_test.go  stt_api.go  ws_gateway.go
src-go/api/: aivis_client.go  ollama_client.go
src-go/config/: config.go  config_test.go
src-go/discordbot/: bot.go
src-go/docs/: docs.go  swagger.json  swagger.yaml
src-py/: README.md  UI_API.md  client_test.py  config.py  main.py  ui.py
src-rust/: Cargo.toml  README.md
src_py/: README.md  UI_API.md  client_test.py  main.py  pyproject.toml  ui.py
src_py/abliterator/: README.md  check.py  download_model.py  main.py  pyproject.toml
src_py/abliterator/checkpoints/: D----research--Live-Vision-Narrator--models--hub--Qwen3--5-9B.jsonl
ui/: index.html  main.js  style.css  ui.py
util/: profiling.go
(+5 files in other folders)
