[project]
name = "live-vision-narrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.0.0",
    "tiktoken>=0.12.0",
]
